name:          9m
version:       0.1.1
synopsis:      Unicode URI shortener
license:       BSD3
license-file:  LICENSE
author:        Erlend Hamberg
maintainer:    erlend@hamberg.no
category:      Network
tested-with:   GHC ==9.2.4
build-type:    Simple
cabal-version: >=1.10

executable 9m
  main-is:          9m.hs
  other-modules:
    DataLayer
    SafeBrowsing
    Templates

  hs-source-dirs:   src
  default-language: GHC2021
  ghc-options:      -Wall
  build-depends:
                  aeson
                , base
                , blaze-html
                , blaze-markup
                , bytestring
                , containers
                , errors
                , http-types
                , ini
                , lens
                , monad-logger
                , mtl
                , optparse-applicative
                , persistent
                , persistent-sqlite
                , persistent-template
                , random
                , resourcet
                , scotty
                , shakespeare
                , string-conversions
                , string-conversions
                , text
                , time
                , transformers
                , wreq
