cabal-version: 2.4
name:          9m
version:       0.1.1
synopsis:      Unicode URI shortener
license:       BSD-3-Clause
license-file:  LICENSE
author:        Erlend Hamberg
maintainer:    erlend@hamberg.no
category:      Network
tested-with:   GHC ==9.2.4
build-type:    Simple
data-dir: data
data-files:
  svg/*.svg

executable 9m
  main-is:          9m.hs
  other-modules:
    DataLayer
    SafeBrowsing
    Templates
    Paths_9m
  autogen-modules:
    Paths_9m

  hs-source-dirs:   src
  default-language: GHC2021
  ghc-options:      -Wall
  build-depends:
                  aeson
                , base
                , blaze-html
                , blaze-markup
                , bytestring
                , containers
                , errors
                , http-types
                , ini
                , lens
                , monad-logger
                , mtl
                , optparse-applicative
                , persistent
                , persistent-sqlite
                , persistent-template
                , random
                , resourcet
                , scotty
                , shakespeare
                , string-conversions
                , string-conversions
                , text
                , time
                , transformers
                , wreq
